fix  favourite api
